# dbi_study

./: README.md
doc/: Makefile  abstract.tex  analysis.tex  approach.tex  back.tex  bzip_perf.plot  conclusions.tex  dbi.bib  dbi.tex  design.tex  discussion.tex  eval.tex  evaluation.tex  implementation.tex  intro.tex  overview.tex
dynamorio/inst_count/: inscount.c  inscount0.c  inscount1.c
dynamorio/rbuf/: rbuf.c
pin/memory_profiler/: syscall_handle.cpp
pin/rbuf/: Makefile  empty.cpp  rbuf0.cpp  rbuf1.cpp
valgrind/inscount/: Makefile  Makefile.am  Makefile.in  ic_main.c
valgrind/inscount/.deps/: inscount_x86_linux-ic_main.Po
valgrind/inscount/tests/: Makefile  Makefile.in
valgrind/ringbuffer/: Makefile  Makefile.am  Makefile.in  rb_main.c
